debugging with Tip & Tristan. Completed #5 together

--- a/form.html
+++ b/form.html
@@ -51,7 +51,8 @@
           <button id="submit-button" type="submit">Make reservation</button>
         </div>
       </form>
-      <div id="total"></div>
+      <div id="total">
+      </div>
       <script src="script.js"></script>
   </body>
 </html>
